--- a/reducer-todo/src/index.css
+++ b/reducer-todo/src/index.css
@@ -13,3 +13,5 @@ html, body, #root {
   width: 100vw;
   min-height: 100vh;
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,400&display=swap');
